// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary on DashBoardPage with a SINGLE expense 1`] = `
<div>
  <h2>
    <p>
       Viewing 
      1
       expense Totaling 
      $0.00
       
    </p>
  </h2>
</div>
`;

exports[`should render ExpensesSummary on DashBoardPage with multiple expenses 1`] = `
<div>
  <h2>
    <p>
       Viewing 
      3
       expenses Totaling 
      $0.00
       
    </p>
  </h2>
</div>
`;
